# mtbank-ai-hiring

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pipeline.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile.api  Dockerfile.pipelines
deploy/grafana/dashboards/: callcenter.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
eval/: golden_set.yaml
scripts/: evaluate_agents.py  evaluate_wer.py  generate_test_data.py  ws_client.py
src/mtbank_analyzer/: __init__.py  config.py  eval.py  logging_setup.py  prompts.py  rules.py  schemas.py  storage.py
src/mtbank_analyzer/agents/: __init__.py  base.py  classifier.py  compliance.py  quality.py  summarizer.py  trends.py
src/mtbank_analyzer/api/: __init__.py  app.py  metrics.py  routes.py  ws.py
src/mtbank_analyzer/asr/: __init__.py  audio.py  diarizer.py  service.py  transcriber.py
src/mtbank_analyzer/orchestration/: __init__.py  graph.py
src/mtbank_analyzer/prompts/: classifier.yaml  compliance.yaml  quality.yaml  summarizer.yaml  trends.yaml
src/mtbank_analyzer/rules/: compliance.yaml  quality_weights.yaml
test_data/: README.md  dialog_card_block_stereo.txt  dialog_credit_8k_phone.txt  monologue_deposit.txt  monologue_transfer_8k.txt  wer_report.md
tests/: conftest.py  test_agents.py  test_api.py  test_asr.py  test_config.py  test_eval.py  test_orchestration.py  test_pipeline.py
