[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mtbank-analyzer"
dynamic = ["version"]
description = "MTBank AI Engineer - анализ звонков контакт-центра: ASR + Multi-Agent аналитика на OpenWebUI Pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pavel Kruglikovskii" }]
keywords = ["asr", "whisper", "langgraph", "openwebui", "fastapi", "speech-analytics", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Ядро: общая библиотека для OpenWebUI Pipeline и FastAPI-сервиса.
# Лёгкая по зависимостям - контейнер pipelines не тянет torch/whisper.
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "structlog>=24.1",
    "httpx>=0.27",
    "pyyaml>=6",
    "langgraph>=0.2.50",
    "langchain-openai>=0.2.5",
]

[project.optional-dependencies]
# Analysis Engine: ASR + REST API (только контейнер api)
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "prometheus-client>=0.20",
]
# Разработка, тесты, подготовка тестовых данных
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.11",
    "types-PyYAML>=6",
    "pre-commit>=3.7",
    "jiwer>=3.0",
    "edge-tts>=6.1",
    "websockets>=12",   # scripts/ws_client.py - демо real-time режима
    "truststore>=0.9",  # корпоративные сети с TLS-инспекцией
]

[project.urls]
Repository = "https://github.com/devAsmodeus/mtbank-ai-hiring"
Issues = "https://github.com/devAsmodeus/mtbank-ai-hiring/issues"

[tool.setuptools.dynamic]
version = { attr = "mtbank_analyzer.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mtbank_analyzer = ["prompts/*.yaml", "rules/*.yaml", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = ["RUF001", "RUF002", "RUF003"] # кириллица в строках/комментариях - намеренно

[tool.ruff.lint.per-file-ignores]
# длинные реплики диалогов, строки метрик и примеры JSON-схем не переносим
"scripts/*.py" = ["E501"]
"src/mtbank_analyzer/agents/*" = ["E501"]
"pipeline.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # tests импортируют хелперы из tests.conftest
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
# без фиксации python_version: под каждой версией матрицы CI mypy берёт её от
# интерпретатора (иначе numpy-стабы для 3.12+ не парсятся под target 3.11)
files = ["src", "pipeline.py"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# библиотеки без py.typed / стабов
module = ["faster_whisper.*", "scipy.*", "prometheus_client.*", "av.*"]
ignore_missing_imports = true
